--- a/style.css
+++ b/style.css
@@ -122,4 +122,14 @@ i{
     letter-spacing: 1px;
     color: black;
 }
+@media screen and (max-width:630px){
+    .main-content{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+@media screen and (max-width:673px){
+    .main-content{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
 /* Write CSS code below */
