--- a/style.css
+++ b/style.css
@@ -124,12 +124,12 @@ i{
 }
 @media screen and (max-width:630px){
     .main-content{
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 @media screen and (max-width:673px){
     .main-content{
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 /* Write CSS code below */
