--- a/style.css
+++ b/style.css
@@ -122,11 +122,11 @@ i{
     letter-spacing: 1px;
     color: black;
 }
-@media screen and (max-width:630px){
+/* @media screen and (max-width:630px){
     .main-content{
         grid-template-columns: repeat(1, 1fr);
     }
-}
+} */
 @media screen and (min-width:0px) and (max-width:673px){
     .main-content{
         grid-template-columns: repeat(1, 1fr);
